# gprprotool

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/gpr/: converter.rs  ffi.rs  metadata_reader.rs  mod.rs
src/models/: conversion_config.rs  gpr_file.rs  mod.rs
src/ui/: app.rs  file_browser.rs  mod.rs  render.rs
src/utils/: file_utils.rs
